# Emby_To_MPV

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_backend.py  test_emby_service.py
